--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -168,8 +168,8 @@ target_link_libraries(${PROJECT_NAME} PRIVATE
 
 set_target_properties(${PROJECT_NAME} PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER AmurClient.online
-    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
-    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
+    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION_SEMVER}
+    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_SEMVER_MAJOR}.${PROJECT_VERSION_SEMVER_MINOR}
     MACOSX_BUNDLE TRUE
     WIN32_EXECUTABLE TRUE
 )
@@ -189,7 +189,7 @@ include(\"${CMAKE_SOURCE_DIR}/cmake/linuxdeploy.cmake\")
 
 build_appimage(
     APP_NAME         \"${PROJECT_NAME}\"
-    APP_VERSION      \"${PROJECT_VERSION}\"
+    APP_VERSION      \"${PROJECT_VERSION_SEMVER}\"
     EXECUTABLE       \"${PROJECT_NAME}\"
     ICON             \"${CMAKE_SOURCE_DIR}/data/images/logo.png\"
     APP_ARCH         \"${CMAKE_SYSTEM_PROCESSOR}\"
